--- a/bitrix/templates/ag/styles.css
+++ b/bitrix/templates/ag/styles.css
@@ -78,3 +78,7 @@ div.ag-section-top h2.bx_catalog_tile_title a{
     color: #444;
     font-size: 32px;
 }
+
+.shop_rule_text{
+    margin-bottom: 20px;
+}
