--- a/bitrix/templates/agnew/styles.css
+++ b/bitrix/templates/agnew/styles.css
@@ -361,19 +361,51 @@ div.catalog-ajax-block{
         background-position: 50% 50%;
     }
 
-    div.catalog-ajax-block div.ag-main-product a{
-        position: absolute;
-        top: 0px;
-        bottom: 0px;
-        left: 0px;
-        right: 30px;
-    }
+        div.catalog-ajax-block div.ag-main-product a{
+            position: absolute;
+            top: 0px;
+            bottom: 0px;
+            left: 0px;
+            right: 30px;
+        }
     
+    
+        div.catalog-ajax-block div.ag-main-product div.ag-main-price{
+            position: absolute;
+            bottom: 0px;
+            height: 32px;
+            left: 0px;
+            right: 0px;
+            background-color: black;
+            color: white;
+            font-size: 18px;
+            font-weight: bold;
+            opacity: 0.5;
+            padding-top: 6px;
+        }
+
+        div.catalog-ajax-block div.ag-main-product:hover div.ag-main-price{
+            opacity: 0.7;
+        }
+        
+        
 .next-page{
     clear: both;
-    text-align: center;
+    margin: 10px auto 30px auto;
+    
+    width: 108px;
+    color: black;
     display: block;
-    margin-bottom: 30px;
+    background-color: #0eb0a0;
+    text-align: center;
+    font: 11px/100% Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    transition: 1s;
+    line-height: 30px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
 }
 
 
@@ -384,3 +416,63 @@ div.catalog-ajax-block{
     background-image: url(/bitrix/templates/agnew/i/common/ajax-loader.gif); 
 }
 
+#back-top {
+ position: fixed;
+ bottom: 30px;
+ right: 30px;
+ margin-left: 866px;
+ opacity: 0.8;
+}
+#back-top a {
+ width: 108px;
+ color: black;
+ display: block;
+ background-color: #0eb0a0;
+ text-align: center;
+ font: 11px/100% Arial, Helvetica, sans-serif;
+ text-decoration: none;
+ -webkit-transition: 1s;
+ -moz-transition: 1s;
+ transition: 1s;
+ line-height: 30px;
+ -webkit-border-radius: 10px;
+ border-radius: 10px;
+}
+#back-top a:hover {
+ background-color: #777;
+}
+
+.bx_catalog_item{
+    width: 300px !important;
+}
+
+.bx_catalog_item:nth-child(3n+1) {
+    clear: none !important;
+}
+
+.bx_catalog_item_title{
+    text-align: center;
+    margin: 0px 15px;
+}
+
+.bx_catalog_item_price{
+    text-align: center;
+    position: absolute;
+    bottom: 0px;
+    height: 32px;
+    left: 0px;
+    right: 0px;
+    background-color: #666;
+    font-weight: bold;
+    padding-top: 0px;
+    font-size: 18px;
+}
+
+    div.bx_catalog_item_price div.bx_price{
+        color: white;
+    }
+
+
+.bx_catalog_item_images{
+    margin-bottom: 30px;
+}
