--- a/bitrix/templates/agnew/styles.css
+++ b/bitrix/templates/agnew/styles.css
@@ -699,3 +699,30 @@ div.ag-specialoffer{
 .bx_slide_left{
     display: none;
 }
+
+.bx_slide li{
+    padding: 4px;
+    margin: 4px;
+    background-color: white;
+    width: 120px !important;
+    height: 120px !important;
+    border: 1px #AAA solid;
+    position: relative;
+}
+
+    .bx_slide li img{
+        width: 100%;
+        top: 0px;
+    }
+
+    .bx_slide li a{
+        position: absolute;
+        width: 110px;
+        height: 110px;
+        top: 4px;
+    }
+
+
+.bx_item_detail .bx_item_slider .bx_bigimages .bx_bigimages_imgcontainer img{
+    margin-top: 20px;
+}
