--- a/local/assets/styles/mod.css
+++ b/local/assets/styles/mod.css
@@ -122,3 +122,8 @@ input.ag-balls[type="radio"]{
     background-position: 50% 50%;
     background-size: cover;
 }
+
+.ag-shop-card__sizes-item{
+    width: auto !important;
+    padding: 0px 5px;
+}
